Colaboratory を使用して作成しました

--- a/BERT事前学習モデルを使ってみよう.ipynb
+++ b/BERT事前学習モデルを使ってみよう.ipynb
@@ -922,15 +922,69 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "#課題２"
       ],
       "metadata": {
-        "id": "K7WcvgcZx6M4"
+        "id": "gKpsDKcE1QcG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#トークナイザーとモデルの準備\n",
+        "model_name = \"daigo/bert-base-japanese-sentiment\"\n",
+        "\n",
+        "tokenizer = BertJapaneseTokenizer.from_pretrained(\"cl-tohoku/bert-base-japanese-whole-word-masking\")\n",
+        "model = BertForSequenceClassification.from_pretrained(model_name, config = config)\n",
+        "\n",
+        "#クラス分類\n",
+        "classes = ['ポジティブ','ネガティブ']\n",
+        "\n",
+        "#入力\n",
+        "sequence_0 = '私は幸せです'\n",
+        "sequence_1 = '私は不幸です'\n",
+        "\n",
+        "#前処理\n",
+        "input_0 = tokenizer.encode_plus(sequence_0, return_tensors=\"pt\")\n",
+        "input_1 = tokenizer.encode_plus(sequence_1, return_tensors=\"pt\")\n",
+        "\n",
+        "#推論\n",
+        "input_logits_0 = model(**input_0)[0]\n",
+        "input_logits_1 = model(**input_1)[0]\n",
+        "\n",
+        "#結果\n",
+        "results_0 = torch.softmax(input_logits_0, dim=1).tolist()[0]\n",
+        "results_1 = torch.softmax(input_logits_1, dim=1).tolist()[0]\n",
+        "\n",
+        "#出力\n",
+        "for i in range(len(classes)):\n",
+        "  print(f\"{classes[i]}: {round(results_0[i] * 100)}%\")\n",
+        "\n",
+        "for i in range(len(classes)):\n",
+        "  print(f\"{classes[i]}: {round(results_1[i] * 100)}%\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K7WcvgcZx6M4",
+        "outputId": "36c7c4af-1e5d-4850-f50e-ce1a0e5f351f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ポジティブ: 99%\n",
+            "ネガティブ: 1%\n",
+            "ポジティブ: 1%\n",
+            "ネガティブ: 99%\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
