Colaboratory を使用して作成しました

--- a/BERT事前学習モデルを使ってみよう.ipynb
+++ b/BERT事前学習モデルを使ってみよう.ipynb
@@ -985,12 +985,69 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#トークナイザーとモデルの準備\n",
+        "model_name = \"daigo/bert-base-japanese-sentiment\"\n",
+        "\n",
+        "tokenizer = BertJapaneseTokenizer.from_pretrained(\"cl-tohoku/bert-base-japanese-whole-word-masking\")\n",
+        "model = BertForSequenceClassification.from_pretrained(model_name, config = config)\n",
+        "\n",
+        "count = 0\n",
+        "possitive = 0\n",
+        "neggative = 0\n",
+        "\n",
+        "#クラス分類\n",
+        "classes = ['ポジティブ','ネガティブ']\n",
+        "\n",
+        "#入力\n",
+        "\n",
+        "f = open('music.txt', 'r')\n",
+        "for line in f:\n",
+        "  sequence = line\n",
+        "  input = tokenizer.encode_plus(sequence, return_tensors=\"pt\")\n",
+        "\n",
+        "  #推論\n",
+        "  input_logits = model(**input)[0]\n",
+        "\n",
+        "  #結果\n",
+        "  results = torch.softmax(input_logits, dim=1).tolist()[0]\n",
+        "\n",
+        "  possitive += round(results[0] * 100)\n",
+        "  neggative += round(results[1] * 100)\n",
+        "  count += 1\n",
+        "\n",
+        "#出力\n",
+        "print(\"possitive:\" + str(possitive/count))\n",
+        "print(\"neggative:\" + str(neggative/count))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "duAwvZCe-LGR",
+        "outputId": "98bc8d00-8fb4-4ad0-be69-e577bce6195f"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "possitive:71.48648648648648\n",
+            "neggative:28.513513513513512\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "name": "BERT事前学習モデルを使ってみよう.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
